--- a/pom.xml
+++ b/pom.xml
@@ -100,14 +100,14 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://44.192.81.238:8888/mylandmarktech/repository/boa-release/</url>
+	      <name>codesave_release</name>
+	      <url>http://172.30.0.12:8081/repository/codesave_release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://44.192.81.238:8888/mylandmarktech/repository/boa-snapshot/</url>
+	      <name>codesave_snapshot</name>
+	      <url>http://172.30.0.12:8081/repository/codesave_snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
